Fixing form alignment

--- a/app/assets/stylesheets/editor-3/forms.css.scss
+++ b/app/assets/stylesheets/editor-3/forms.css.scss
@@ -14,6 +14,8 @@
   padding-top: 9px;
 }
 .Editor-formInput {
+  @include display-flex();
+  @include align-items(center);
   @include flex(1);
   position: relative;
   max-width: 158px;
